// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a user task duration selection for user task duration reports 1`] = `
<Popover
  className="AggregationType"
  floating={true}
  isTabTip={true}
  trigger={
    <ButtonTrigger
      iconDescription="Aggregation"
      kind="ghost"
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "size": [Function],
          },
          "render": [Function],
        }
      }
      size="sm"
    >
      P50
    </ButtonTrigger>
  }
>
  <Form>
    <ForwardRef(Stack)
      gap={3}
    >
      <FormGroup
        legendText="User task duration"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            id="total"
            key="total"
            labelA="Total"
            labelB="Total"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="work"
            key="work"
            labelA="Assigned"
            labelB="Assigned"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={true}
            id="idle"
            key="idle"
            labelA="Unassigned"
            labelB="Unassigned"
            onToggle={[Function]}
            size="sm"
            toggled={true}
          />
        </ForwardRef(Stack)>
      </FormGroup>
      <FormGroup
        legendText="Basic aggregations"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            id="sum"
            key="sum"
            labelA="Sum"
            labelB="Sum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="min"
            key="min"
            labelA="Minimum"
            labelB="Minimum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="avg"
            key="avg"
            labelA="Average"
            labelB="Average"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="max"
            key="max"
            labelA="Maximum"
            labelB="Maximum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
        </ForwardRef(Stack)>
      </FormGroup>
      <FormGroup
        legendText="Percentile aggregations"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            id="P99"
            key="P99"
            labelA="P99"
            labelB="P99"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="P95"
            key="P95"
            labelA="P95"
            labelB="P95"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="P90"
            key="P90"
            labelA="P90"
            labelB="P90"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="P75"
            key="P75"
            labelA="P75"
            labelB="P75"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={true}
            id="P50"
            key="P50"
            labelA="P50 (median)"
            labelB="P50 (median)"
            onToggle={[Function]}
            size="sm"
            toggled={true}
          />
          <Toggle
            disabled={false}
            id="P25"
            key="P25"
            labelA="P25"
            labelB="P25"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
        </ForwardRef(Stack)>
      </FormGroup>
    </ForwardRef(Stack)>
  </Form>
</Popover>
`;

exports[`should render an aggregation selection for duration reports 1`] = `
<Popover
  className="AggregationType"
  floating={true}
  isTabTip={true}
  trigger={
    <ButtonTrigger
      iconDescription="Aggregation"
      kind="ghost"
      renderIcon={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "size": [Function],
          },
          "render": [Function],
        }
      }
      size="sm"
    >
      P50
    </ButtonTrigger>
  }
>
  <Form>
    <ForwardRef(Stack)
      gap={3}
    >
      <FormGroup
        legendText="Basic aggregations"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            id="sum"
            key="sum"
            labelA="Sum"
            labelB="Sum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="min"
            key="min"
            labelA="Minimum"
            labelB="Minimum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="avg"
            key="avg"
            labelA="Average"
            labelB="Average"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="max"
            key="max"
            labelA="Maximum"
            labelB="Maximum"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
        </ForwardRef(Stack)>
      </FormGroup>
      <FormGroup
        legendText="Percentile aggregations"
      >
        <ForwardRef(Stack)
          gap={3}
        >
          <Toggle
            disabled={false}
            id="P99"
            key="P99"
            labelA="P99"
            labelB="P99"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="P95"
            key="P95"
            labelA="P95"
            labelB="P95"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="P90"
            key="P90"
            labelA="P90"
            labelB="P90"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={false}
            id="P75"
            key="P75"
            labelA="P75"
            labelB="P75"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
          <Toggle
            disabled={true}
            id="P50"
            key="P50"
            labelA="P50 (median)"
            labelB="P50 (median)"
            onToggle={[Function]}
            size="sm"
            toggled={true}
          />
          <Toggle
            disabled={false}
            id="P25"
            key="P25"
            labelA="P25"
            labelB="P25"
            onToggle={[Function]}
            size="sm"
            toggled={false}
          />
        </ForwardRef(Stack)>
      </FormGroup>
    </ForwardRef(Stack)>
  </Form>
</Popover>
`;

exports[`should render nothing if the current result is no duration and the view is not variable 1`] = `""`;
